# money_manager

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20240101000001_init.sql  20240101000002_seed_data.sql  20240101000003_recurring_transactions.sql  20240101000004_seed_test_data.sql  20240203155900_installments.sql  20240204000001_transaction_templates.sql  20240205000001_credit_card_settings.sql  20240206000001_currency_management.sql  20240206000001_security.sql  20240208000001_net_worth.sql  20240209000001_transaction_photos.sql  20240210000001_auto_backup_settings.sql  20240211000001_savings_goals.sql  20240212000001_tags.sql  20240213000001_csv_import.sql  20240214000001_advanced_export_and_cleaning.sql  20240215000001_recurring_improvements.sql  20240216000001_recurring_approval_mode.sql  20240217000001_goal_allocations.sql  20240218000001_performance_indexes.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: accounts.rs  advanced.rs  analytics.rs  bills.rs  budgets.rs  categories.rs  credit_cards.rs  currencies.rs  export.rs  goals.rs  import.rs  installments.rs  mod.rs  networth.rs  photos.rs  recurring.rs  scheduled_backup.rs  security.rs  settings.rs  tags.rs  templates.rs  transactions.rs
src-tauri/src/db/: encryption.rs  mod.rs
src-tauri/src/models/: account.rs  advanced.rs  analytics.rs  bill.rs  budget.rs  (+12 more)
(+97 files in other folders)
