#File: src-tauri/Cargo.toml
[package]
name = "money_manager"
version = "0.1.0"
description = "A personal finance and money tracking desktop application"
authors = ["Miththiran"]
license = "MIT"
repository = "https://github.com/Rajamiththiran/money_manager"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
bcrypt = "0.16"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif"] }
